tickets/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-app
  template:
    metadata:
      labels:
        app: tickets-app
    spec:
      containers:
        - name: api
          image: ghcr.io/traefik-workshops/api-server:v0.1.0
          args: ["-data", "/api/api.json", "-openapi", "/public/openapi.yaml", "-errorrate", "1"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: api-data
            mountPath: /api
          - name: openapi
            mountPath: /public
      volumes:
        - name: api-data
          configMap:
            name: tickets-data
        - name: openapi
          configMap:
            name: tickets-openapi

---
apiVersion: v1
kind: Service
metadata:
  name: tickets-app
  labels:
    app: tickets-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: api
  selector:
    app: tickets-app
